Begun to style top half of website

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Odin Project Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;600&display=swap" rel="stylesheet">
   </head>
   <body>
 	<script src="index.js"></script>
     <div class="container">
         <div class="header-section">
-            <div class="nav">
+            <div class="header-section">
             <h3>Ariana's Website</h3>
-            <ul>
-                <li>Portfolio</li>
-                <li>Inspiration</li>
-                <li>Contact</li>
+            <ul class="nav">
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Inspiration</a></li>
+                <li><a href="#">Contact me</a></li>
             </ul>
             </div>
             <div class="above-fold">
