Added styling to first section on home page

--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
   <body>
 	<script src="index.js"></script>
     <div class="container">
-        <div class="header-section">
+        <div class="header">
             <div class="header-section">
             <h3>Ariana's Website</h3>
             <ul class="nav">
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Inspiration</a></li>
-                <li><a href="#">Contact me</a></li>
+                <li class="item"><a href="#">Portfolio</a></li>
+                <li class="item"><a href="#">Inspiration</a></li>
+                <li class="item"><a href="#">Contact me</a></li>
             </ul>
             </div>
-            <div class="above-fold">
+            <div class="head-section">
+                <div class="head-section-left">
                 <h1>This website is awesome</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id arcu sagittis, scelerisque ex vel, rutrum arcu. Praesent at feugiat lectus.</p>
                <a class="button" href="#">Sign me up</a>
+                </div>
+                <div class="head-section-right">
                <img src="https://cdn.pixabay.com/photo/2015/06/27/17/23/flower-823655_1280.jpg"/>
+               </div>
             </div>
         </div>
         <div class="body-section">
