second sectionadded and styled

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                </div>
             </div>
         </div>
+        
+            <h2 class="text-centralised">About me</h2>
         <div class="body-section">
-            <h2>Some pretty pictures</h2>
-            <img class="bio-img" src="https://cdn.pixabay.com/photo/2019/12/17/01/45/tree-4700542_1280.jpg"> In sit amet nisl venenatis, pharetra elit a, iaculis ligula. Nam auctor condimentum sem id porta. Sed eget vehicula tortor.
-            <img class="bio-img" src="https://cdn.pixabay.com/photo/2019/07/22/13/35/farm-4355161_1280.jpg"> Duis porttitor quam sed lacinia pellentesque.
-            <img class="bio-img" src="https://cdn.pixabay.com/photo/2018/08/26/19/17/sunflower-3633082_1280.jpg"> Quisque pretium, orci sit amet blandit elementum, dui urna semper massa, at porttitor sem nisi accumsan turpis.
-            <img class="bio-img" src="https://cdn.pixabay.com/photo/2015/07/28/11/59/purple-window-864295_1280.jpg"> Morbi nunc neque, tincidunt vel lectus vel, imperdiet iaculis lacus. Nulla blandit luctus ligula non eleifend.
+            <div class="about-me"><img src="https://cdn.pixabay.com/photo/2019/12/17/01/45/tree-4700542_1280.jpg"> In sit amet nisl venenatis, pharetra elit a, iaculis ligula. Nam auctor condimentum sem id porta. Sed eget vehicula tortor.</div>
+            <div class="about-me"><img src="https://cdn.pixabay.com/photo/2019/07/22/13/35/farm-4355161_1280.jpg"> Duis porttitor quam sed lacinia pellentesque.</div>
+            <div class="about-me"><img src="https://cdn.pixabay.com/photo/2018/08/26/19/17/sunflower-3633082_1280.jpg"> Quisque pretium, orci sit amet blandit elementum, dui urna semper massa, at porttitor sem nisi accumsan turpis.</div>
+            <div class="about-me"><img src="https://cdn.pixabay.com/photo/2015/07/28/11/59/purple-window-864295_1280.jpg"> Morbi nunc neque, tincidunt vel lectus vel, imperdiet iaculis lacus. Nulla blandit luctus ligula non eleifend.</div>
 
         </div>
         <div class="quote-section">
