quote section styled

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         </div>
         <div class="quote-section">
-            <blockquote>"Not all those who wander are lost"</blockquote>
-            <figcaption>J.R.R. Tolkien – The Fellowship of The Ring</figcaption>
+            <blockquote>"When you give joy to other people, you get more joy in return. You should give a good thought to happiness that you can give out."</blockquote>
+            <figcaption>Eleanor Roosevelt</figcaption>
         </div>
         <div class="footer-cta">
             <h4>Contact me</h4>
