footer area styled

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="head-section">
                 <div class="head-section-left">
-                <h1>This website is awesome</h1>
+                <h1>Welcome to my website</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id arcu sagittis, scelerisque ex vel, rutrum arcu. Praesent at feugiat lectus.</p>
                <a class="button" href="#">Sign me up</a>
                 </div>
@@ -47,9 +47,15 @@
             <figcaption>Eleanor Roosevelt</figcaption>
         </div>
         <div class="footer-cta">
+            <div class="cta-box">
+                <div class="left-cta-box">
             <h4>Contact me</h4>
-            <p>You can find my details here</p>
+            <p>Aliquam tincidunt, est id bibendum egestas. </p>
+                </div>
+                <div class ="right-cta-box">
             <a href="#" class="button-footer">Contact me</a>
+                </div>
+            </div>
         </div>
     </div>
   </body>
