full width website and added links to top nav

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="header-section">
             <h3>Ariana's Website</h3>
             <ul class="nav">
-                <li class="item"><a href="#">Portfolio</a></li>
-                <li class="item"><a href="#">Inspiration</a></li>
-                <li class="item"><a href="#">Contact me</a></li>
+                <li class="item"><a href="#portfolio">Portfolio</a></li>
+                <li class="item"><a href="#inspiration">Inspiration</a></li>
+                <li class="item"><a href="#contactme">Contact me</a></li>
             </ul>
             </div>
             <div class="head-section">
@@ -34,7 +34,7 @@
             </div>
         </div>
         
-            <h2 class="text-centralised">About me</h2>
+            <h2 class="text-centralised" id="portfolio">About me</h2>
         <div class="body-section">
             <div class="about-me"><img src="https://cdn.pixabay.com/photo/2019/12/17/01/45/tree-4700542_1280.jpg"> In sit amet nisl venenatis, pharetra elit a, iaculis ligula. Nam auctor condimentum sem id porta. Sed eget vehicula tortor.</div>
             <div class="about-me"><img src="https://cdn.pixabay.com/photo/2019/07/22/13/35/farm-4355161_1280.jpg"> Duis porttitor quam sed lacinia pellentesque.</div>
@@ -42,11 +42,11 @@
             <div class="about-me"><img src="https://cdn.pixabay.com/photo/2015/07/28/11/59/purple-window-864295_1280.jpg"> Morbi nunc neque, tincidunt vel lectus vel, imperdiet iaculis lacus. Nulla blandit luctus ligula non eleifend.</div>
 
         </div>
-        <div class="quote-section">
+        <div class="quote-section" id="inspiration">
             <blockquote>"When you give joy to other people, you get more joy in return. You should give a good thought to happiness that you can give out."</blockquote>
             <figcaption>Eleanor Roosevelt</figcaption>
         </div>
-        <div class="footer-cta">
+        <div class="footer-cta" id="contactme">
             <div class="cta-box">
                 <div class="left-cta-box">
             <h4>Contact me</h4>
